# Math

./: CMakeLists.txt  README.md
Math/: CMakeLists.txt  Math.cpp  Math.h  formatter.h
Math/include/: common.h  float2.h  float4.h  float8.h  linear.h  mat2.h  mat3.h  mat4.h  math.h  quat.h  utils.h  vec2.h  vec3.h  vec4.h
Math/source/: float2.cpp  float4.cpp  float8.cpp  mat2.cpp  mat3.cpp  mat4.cpp  quat.cpp  utils.cpp  vec2.cpp  vec3.cpp  vec4.cpp
